Closed Bug 252496 Opened 22 years ago Closed 22 years ago

Clicking Get New Mail from the actual RSS Server (and not a folder) fails

Categories

(MailNews Core :: Feed Reader, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: mscott, Assigned: mscott)

Details

Attachments

(1 file)

If you click Get New Mail while you have the RSS account selected (as opposed to a folder with feeds in it), we fail to check all the feeds for new folders.
Status: NEW → ASSIGNED
Target Milestone: --- → Thunderbird0.8
Attached patch the fixSplinter Review
Comment on attachment 153921 [details] [diff] [review] the fix David, this makes GetNewMail work when the RSS root folder is selected by calling out to PerformBiff which knows how to walk through the root folder's sub folders... Before, GetNewMail would just give you an error because there are no feedUrl properties stored on the root rss folder...
Attachment #153921 - Flags: superreview?(bienvenu)
Attachment #153921 - Flags: superreview?(bienvenu) → superreview+
fixed branch and trunk
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Component: RSS → Feed Reader
Product: Thunderbird → MailNews Core
Target Milestone: Thunderbird0.8 → ---
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: