Bug #252496 --> Clicking Get New Mail from the actual RSS Server (and not a folder) fails to fetch new feed postings for the rss feeds.

sr=bienvenu